[tool.poetry]
name = "voice_packs"
version = "0.2.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>", "Gerrit Pannek"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
PyYAML = "^6.0"
uberduck = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
